<resources>
    <string name="app_name">5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_bets">MANAGE YOUR BETS</string>
    <string name="you_haven_t_got_any_bankroll_nclick_plus_to_create_bankroll">You haven\'t got any bankroll.\nClick plus to create a bankroll</string>
    <string name="balance">Balance</string>
    <string name="number_of_bets">Number of bets</string>
    <string name="roi">ROI</string>
    <string name="average_bet">Average bet</string>
    <string name="benefits">Benefits</string>
    <string name="success">Success</string>
    <string name="roc">ROC</string>
    <string name="average_odd">Average odd</string>
    <string name="delete_a_bankroll">Delete a bankroll</string>
    <string name="name_of_bet">Name of bet</string>
    <string name="odd_ex_1_7">Odd (ex 1.7)</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="bankroll_name">Bankroll name</string>
    <string name="initial_capital">Initial capital</string>
    <string name="bet_name">Bet name</string>
    <string name="bet">Bet:</string>
    <string name="odd">Odd:</string>
</resources>