<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".ui.screens.AddBankrollFragment">


    <EditText
        android:id="@+id/et_bankroll_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/app_main_green"
        android:hint="@string/bankroll_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_initial_capital"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/app_main_green"
        android:hint="@string/initial_capital"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bankroll_name"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_initial_capital" />
</androidx.constraintlayout.widget.ConstraintLayout>