<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.screens.StatisticFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStatistic">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_balance"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/balance"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_number_of_bet"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_balance">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/number_of_bets"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_number_of_bet"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_roi"
                style="@style/card_style"
                app:cardCornerRadius="10dp"

                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number_of_bet">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/roi"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_roi"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_average_bet"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_roi">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/average_bet"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_average_bet"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_benefits"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/benefits"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_benefits"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_success"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/card_benefits">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/success"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_success"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_roc"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/card_success">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/roc"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_roc"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_average_odd"
                style="@style/card_style"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/card_roc">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:background="@color/app_main_green"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/average_odd"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_average_odd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="20" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerStatistic"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/app_main_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphView" />


</androidx.constraintlayout.widget.ConstraintLayout>